--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">monerujo</string>
-    <string name="login_activity_name">monerujo</string>
+    <string name="app_name" translatable="false">monerujo</string>
+    <string name="login_activity_name" translatable="false">monerujo</string>
     <string name="wallet_activity_name">Wallet</string>
 
     <string name="menu_testnet">Testnet</string>
@@ -21,16 +21,75 @@
     <string name="label_cancel">Cancel</string>
     <string name="label_wallet_advanced_details">Touch for detailed information</string>
 
-    <string name="label_send_success">Success!</string>
+    <string name="label_send_success">Successfully sent</string>
     <string name="label_send_done">Done</string>
 
     <string name="label_receive_info_gen_qr_code">Touch for QR Code</string>
     <string name="info_send_prio_fees">Higher Priority = Higher Fees</string>
 
+    <string name="info_xmrto"><![CDATA[
+        <b>You entered a Bitcoin address.</b><br/>
+        <i>You&apos;ll send XMR and the receiver will get BTC using the <b>XMR.TO</b> service.</i>
+    ]]></string>
+
+    <string name="info_send_xmrto_success_order_label">XMR.TO Order</string>
+
+    <string name="info_send_xmrto_success_sending">Sending</string>
+    <string name="info_send_xmrto_success_status_label">Status:</string>
+    <string name="info_send_xmrto_success_btc">%1$s BTC</string>
+    <string name="info_send_xmrto_success_status">%1$s is %1$s (#%1$d)</string>
+
+    <string name="info_txdetails_xmrto_key">Key:</string>
+    <string name="info_txdetails_xmrto_address">Address:</string>
+    <string name="info_txdetails_xmrto_status">Status:</string>
+    <string name="info_txdetails_xmrto_amount">%1$s BTC</string>
+
+
+    <string name="info_send_xmrto_paid">Confirmation Pending</string>
+    <string name="info_send_xmrto_unpaid">Payment Pending</string>
+    <string name="info_send_xmrto_error">XMR.TO Error (%1$s)</string>
+    <string name="info_send_xmrto_sent">BTC Sent!</string>
+    <string name="info_send_xmrto_query">Querying &#8230;</string>
+
+    <string name="info_send_xmrto_parms"><![CDATA[
+        <b>You can send %1$s &#8212; %2$s BTC</b>.<br/>
+        <i><b>XMR.TO</b> is giving you an exchange rate of <b>%3$s BTC</b> <u>right now</u></i>.
+    ]]></string>
+    <string name="info_send_xmrto_zeroconf"><![CDATA[
+        <i>Amounts up to <b>%1$s BTC</b> will be sent <u>instantly</u>!</i>
+    ]]></string>
+
+    <string name="send_available_btc">Balance: %2$s BTC (%1$s XMR)</string>
+
     <string name="info_paymentid_intergrated">Payment ID integrated</string>
     <string name="info_prepare_tx">Preparing your transaction</string>
 
-    <string name="message_copy_txid">Transaction ID copied to clipboard!</string>
+    <string name="label_send_progress_xmrto_create">Creating XMR.TO Order</string>
+    <string name="label_send_progress_xmrto_query">Querying XMR.TO Order</string>
+    <string name="label_send_progress_create_tx">Preparing Monero Transaction</string>
+
+    <string name="label_send_progress_queryparms">Querying xmr.to parameters</string>
+
+    <string name="label_generic_xmrto_error">XMR.TO ERROR</string>
+    <string name="text_generic_xmrto_error">Code: %1$d</string>
+
+    <string name="text_retry">Touch to retry</string>
+    <string name="text_noretry_monero">Now we\'re stuck here!</string>
+    <string name="text_noretry">Uh-oh, XMR.TO does not seem be available right now!</string>
+
+    <string name="text_send_btc_amount">%1$s BTC = %2$s XMR</string>
+    <string name="text_send_btc_rate">(Rate: %1$s BTC/XMR)</string>
+
+    <string name="label_send_btc_details">Click for more details</string>
+    <string name="label_send_btc_xmrto_info">Visit xmr.to for support &amp; tracking</string>
+    <string name="label_send_txinfo">See TX details for more details</string>
+    <string name="label_send_btc_xmrto_key_lb">Secret Key\nXMR.TO</string>
+    <string name="label_send_btc_xmrto_key">XMR.TO Secret Key</string>
+    <string name="label_send_btc_address">Destination BTC Address</string>
+    <string name="label_send_btc_amount">Amount</string>
+    <string name="label_send_btc_create_order">Creating XMR.TO Order</string>
+
+    <string name="label_send_btc_retry">Touch to retry</string>
 
     <string name="label_send_txid">Transaction ID</string>
     <string name="label_send_address">Destination Address</string>
@@ -74,6 +133,8 @@
     <string name="status_transaction_failed">Transaction failed: %1$s</string>
     <string name="status_transaction_prepare_failed">Could not create transaction!</string>
 
+    <string name="send_xmrto_timeout">Dude, you waited too long!</string>
+
     <string name="service_busy">I am still busy with your last wallet &#8230;</string>
 
     <string name="prompt_rename">Rename %1$s</string>
@@ -96,8 +157,7 @@
     <string name="title_amount">Amount</string>
     <string name="title_date">Date</string>
     <string name="xmr_unconfirmed_amount">+ %1$s XMR unconfirmed</string>
-    <!--string name="xmr_balance">%1$s XMR</string-->
-    <string name="xmr">XMR</string>
+    <string name="xmr" translatable="false">XMR</string>
     <string name="label_transactions">Transactions</string>
     <string name="text_daemonConnected">Daemon connected!</string>
 
@@ -119,8 +179,11 @@
 
     <string name="label_copy_viewkey">View Key</string>
     <string name="label_copy_address">Public Address</string>
+    <string name="label_copy_xmrtokey">XMR.TO Key</string>
     <string name="message_copy_viewkey">View Key copied to clipboard!</string>
+    <string name="message_copy_xmrtokey">XMR.TO Key copied to clipboard!</string>
     <string name="message_copy_address">Wallet Address copied to clipboard!</string>
+    <string name="message_copy_txid">Transaction ID copied to clipboard!</string>
     <string name="message_noselect_seed">Selecting seed disabled for security reasons!</string>
     <string name="message_noselect_key">Selecting spend key disabled for security reasons!</string>
     <string name="message_nocopy">Copy disabled for security reasons!</string>
@@ -171,11 +234,11 @@
     <string name="generate_mnemonic_label">Mnemonic Seed</string>
     <string name="generate_restoreheight_label">Restore Height:</string>
 
-    <!--string name="generate_check_keys">Check your keys!</string-->
     <string name="generate_check_key">Enter valid Key</string>
     <string name="generate_check_address">Enter valid Address</string>
     <string name="generate_check_mnemonic">Enter your 25 word seed</string>
-    <!--string name="generate_check_something">Check your entry!</string-->
+
+    <string name="send_amount_btc_xmr">%1$s (indicative)</string>
 
     <string name="send_address_hint">Receiver\'s Address</string>
     <string name="send_paymentid_hint">Payment ID (optional)</string>
@@ -188,13 +251,15 @@
     <string name="send_qr_hint">Scan</string>
     <string name="send_prepare_hint">Prepare</string>
     <string name="send_dispose_hint">Dispose (Undo)</string>
-    <string name="send_send_hint">Spend my sweet Moneroj</string>
+    <string name="send_send_label">Spend my sweet Moneroj</string>
+    <string name="send_send_timed_label">Spend my sweet Moneroj (%1$s)</string>
     <string name="send_really_send_hint">Last Step - Confirm!</string>
-    <string name="send_qr_invalid">Not a monero QR Code</string>
-    <string name="send_qr_address_invalid">Invalid Monero address</string>
+    <string name="send_qr_invalid">Not a QR Code</string>
+    <string name="send_qr_address_invalid">Not a valid payment QR code</string>
+    <string name="send_address_invalid">Not a valid address</string>
     <string name="send_preparing_progress">Preparing transaction</string>
     <string name="send_title">Send</string>
-    <string name="send_available">Available funds: %1$s XMR</string>
+    <string name="send_available">Balance: %1$s XMR</string>
     <string name="send_address_title">Address</string>
     <string name="send_amount_title">Amount</string>
     <string name="send_settings_title">Settings</string>
@@ -204,9 +269,14 @@
     <string name="send_amount_too_large">Amount > Funds</string>
 
     <string name="send_amount_label">Amount</string>
+    <string name="send_fee_btc_label">Fee (XMR)</string>
     <string name="send_fee_label">Fee</string>
     <string name="send_dust_label">Dust</string>
+    <string name="send_total_btc_label">Total (XMR)</string>
     <string name="send_total_label">Total</string>
+
+    <string name="send_amount">%1$s XMR</string>
+    <string name="send_fee">+%1$s Fee</string>
 
     <string name="send_create_tx_error_title">Create Transaction Error</string>
 
@@ -217,14 +287,18 @@
     <string name="tx_list_amount_negative">- %1$s</string>
     <string name="tx_list_amount_positive">+ %1$s</string>
 
+    <string name="tx_status_btc">Status</string>
     <string name="tx_address">Address</string>
     <string name="tx_timestamp">Timestamp</string>
     <string name="tx_id">TX ID</string>
+    <string name="tx_id_btc">TX ID\n(BTC)</string>
     <string name="tx_key">TX Key</string>
     <string name="tx_destination">Destination</string>
+    <string name="tx_destination_btc">Destination\n(BTC)</string>
     <string name="tx_paymentId">Payment ID</string>
     <string name="tx_blockheight">Block</string>
     <string name="tx_amount">Amount</string>
+    <string name="tx_amount_btc">Amount\n(BTC)</string>
     <string name="tx_fee">Fee</string>
     <string name="tx_transfers">Transfers</string>
     <string name="tx_notes">Notes</string>
@@ -248,6 +322,7 @@
     <string name="receive_cannot_open">Could not open wallet!</string>
     <string name="receive_paymentid_invalid">16 or 64 Hex characters (0-9,a-f)</string>
     <string name="receive_integrated_paymentid_invalid">Must be empty with integrated address</string>
+    <string name="receive_bitcoin_paymentid_invalid">Must be empty with bitcoin address</string>
     <string name="receive_amount_invalid">Must be > 0</string>
 
     <string name="receive_amount_empty">Enter value</string>
@@ -266,9 +341,9 @@
     <string name="archive_alert_yes">Yes, do that!</string>
     <string name="archive_alert_no">No thanks!</string>
 
-    <string name="big_amount">999999.999999999999</string>
+    <string name="big_amount" translatable="false">999999.999999999999</string>
 
-    <string-array name="mixin">
+    <string-array name="mixin" translatable="false">
         <item>Ringsize 5</item>
         <item>Ringsize 8</item>
         <item>Ringsize 13</item>
@@ -282,7 +357,7 @@
         <item>Priority High</item>
     </string-array>
 
-    <string-array name="currency">
+    <string-array name="currency" translatable="false">
         <item>XMR</item>
         <item>EUR</item>
         <item>USD</item>
