--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="wallet_activity_name">Cartera</string>
+    <string name="wallet_activity_name">Monedero</string>
 
     <string name="menu_testnet">Testnet</string>
     <string name="menu_about">Acerca De</string>
@@ -13,9 +13,9 @@
     <string name="menu_archive">Archivar</string>
     <string name="menu_backup">Copia de seguridad</string>
 
-    <string name="label_login_wallets">Carteras</string>
+    <string name="label_login_wallets">Monederos</string>
     <string name="label_donate">Donar</string>
-    <string name="label_ok">OK</string>
+    <string name="label_ok">Aceptar</string>
     <string name="label_cancel">Cancelar</string>
     <string name="label_close">Cerrar</string>
     <string name="label_wallet_advanced_details">Toca para información más detallada</string>
@@ -41,7 +41,7 @@
     <string name="rename_progress">Cambio de nombre en progreso</string>
     <string name="open_progress">Comprobando conexión con el daemon</string>
 
-    <string name="service_progress">Preparando las cosas &#8230;\n¡Esto puede llevar unos instantes!</string>
+    <string name="service_progress">Guardando todo\n¡Puede llevar un tiempo!</string>
 
     <string name="backup_success">Copia de seguridad satisfactoria</string>
     <string name="backup_failed">¡Copia de seguridad fallida!</string>
@@ -55,12 +55,12 @@
     <string name="prompt_mainnet">Selección de Red</string>
     <string name="connect_testnet">TestNet</string>
     <string name="connect_mainnet">MainNet</string>
-    <string name="status_walletlist_loading">Cargando Lista de Carteras</string>
-    <string name="status_wallet_loading">Cargando Cartera &#8230;</string>
-    <string name="status_wallet_unloading">Guardando Cartera</string>
-    <string name="status_wallet_unloaded">Cartera guardada</string>
-    <string name="status_wallet_unload_failed">¡Guardado de cartera fallido!</string>
-    <string name="status_wallet_connecting">Conectando &#8230;</string>
+    <string name="status_walletlist_loading">Cargando lista de monederos</string>
+    <string name="status_wallet_loading">Cargando monedero&#8230;</string>
+    <string name="status_wallet_unloading">Guardando monedero</string>
+    <string name="status_wallet_unloaded">Monedero guardada</string>
+    <string name="status_wallet_unload_failed">¡Guardado de monedero fallido!</string>
+    <string name="status_wallet_connecting">Conectando&#8230;</string>
     <string name="status_wallet_connect_failed">¡Conexión con el nodo fallida!\nComprueba el usuario/contraseña</string>
     <string name="status_wallet_connect_timeout">¡Conexión con el nodo ha expirado!\nInténtalo de nuevo o prueba otro.</string>
     <string name="status_wallet_node_invalid">¡Nodo inválido!\nInténtalo con otro.</string>
@@ -73,17 +73,17 @@
     <string name="status_transaction_failed">Transacción fallida: %1$s</string>
     <string name="status_transaction_prepare_failed">¡No se pudo crear la transacción!</string>
 
-    <string name="service_busy">Todavía estoy ocupado con tu última cartera &#8230;</string>
+    <string name="service_busy">Todavía estoy ocupado con tu última monedero &#8230;</string>
 
     <string name="prompt_rename">Renombrar %1$s</string>
 
     <string name="prompt_password">Contraseña para %1$s</string>
     <string name="prompt_send_password">Confirmar Contraseña</string>
     <string name="bad_password">¡Contraseña incorrecta!</string>
-    <string name="bad_wallet">¡La cartera no existe!</string>
-    <string name="error_not_wallet">¡Esto no es una cartera!</string>
+    <string name="bad_wallet">¡El monedero no existe!</string>
+    <string name="error_not_wallet">¡Esto no es un monedero!</string>
     <string name="prompt_daemon_missing">¡La dirección del daemon debe estar configurada!</string>
-    <string name="prompt_wrong_net">La cartera no coincide con la red seleccionada</string>
+    <string name="prompt_wrong_net">El monedero no coincide con la red seleccionada</string>
     <string name="warn_daemon_unavailable">¡No se puede conectar al daemon! Inténtalo de nuevo.</string>
     <string name="panic">¡Algo ha sucedido!</string>
 
@@ -92,7 +92,7 @@
     <string name="label_wallet_receive">Recibir</string>
     <string name="label_wallet_send">Enviar</string>
 
-    <string name="title_amount">Cantidad</string>
+    <string name="title_amount">Monto</string>
     <string name="title_date">Fecha</string>
     <string name="xmr_unconfirmed_amount">+ %1$s XMR sin confirmar</string>
     <string name="label_transactions">Transacciones</string>
@@ -106,7 +106,7 @@
     <string name="local_service_disconnected">Servicio de monerujo desconectado</string>
 
     <string name="status_synced">Sincronizado:</string>
-    <string name="status_remaining">Bloques restantes</string>
+    <string name="status_remaining">bloques restantes</string>
     <string name="status_syncing">Escaneando:</string>
 
     <string name="prompt_problems">Problemas</string>
@@ -117,17 +117,17 @@
     <string name="label_copy_viewkey">Clave de Vista</string>
     <string name="label_copy_address">Dirección Pública</string>
     <string name="message_copy_viewkey">¡Clave de vista copiada al portapapeles!</string>
-    <string name="message_copy_address">¡Dirección de la cartera copiada al portapapeles!</string>
+    <string name="message_copy_address">¡Dirección del monedero copiada al portapapeles!</string>
     <string name="message_noselect_seed">¡La selección de la semilla está desactivada por motivos de seguridad!</string>
     <string name="message_noselect_key">¡La selección de la clave de gasto está desactivada por motivos de seguridad!</string>
     <string name="message_nocopy">¡La copia está desactivada por motivos de seguridad!</string>
 
     <string name="message_exchange_failed">¡No se ha podido obtener la tasa de cambio!\nUsa XMR/XMR o inténtalo de nuevo</string>
 
-    <string name="generate_title">Crear Cartera</string>
-    <string name="generate_name_hint">Nombre de la Cartera</string>
-    <string name="generate_password_hint">Contraseña de la Cartera</string>
-    <string name="generate_buttonGenerate">¡Házme ya una cartera!</string>
+    <string name="generate_title">Crear monedero</string>
+    <string name="generate_name_hint">Nombre del monedero</string>
+    <string name="generate_password_hint">Contraseña del monedero</string>
+    <string name="generate_buttonGenerate">¡Házme ya un monedero!</string>
     <string name="generate_seed">Semilla Mnemotécnica</string>
     <string name="generate_button_accept">¡He apuntado estas 25 palabras!</string>
 
@@ -136,16 +136,11 @@
     <string name="generate_button_delete">BORRAR</string>
 
     <string name="generate_wallet_name">¡Dame un nombre!</string>
-    <string name="generate_wallet_exists">¡La cartera ya existe!</string>
+    <string name="generate_wallet_exists">¡El monedero ya existe!</string>
     <string name="generate_wallet_dot">No puede empezar con .</string>
-    <string name="generate_wallet_creating">Creando cartera</string>
-    <string name="generate_wallet_created">Cartera creada</string>
-    <string name="generate_wallet_create_failed">Creación de cartera fallida</string>
-    <string name="generate_address_placeholder">9tDC52GsMjTNt4dpnRCwAF7ekVBkbkgkXGaMKTcSTpBhGpqkPX56jCNRydLq9oGjbbAQBsZhLfgmTKsntmxRd3TaJFYM2f8</string>
-    <string name="generate_viewkey_placeholder">e2b99f4cc3d644774c4b118db05f8aa9967583a01ca4d47058c3860af10bd306</string>
-    <string name="generate_spendkey_placeholder">300a54208ab0a638a8407a12e3de946da76f5a9ded303338452332ec7755210d</string>
-    <string name="generate_mnemonic_placeholder">camp feline inflamed memoir afloat eight alerts females gutter cogs menu waveform gather tawny judge gusts yahoo doctor females biscuit alchemy reef agony austere camp</string>
-    <string name="generate_restoreheight_placeholder">1307882</string>
+    <string name="generate_wallet_creating">Creando monedero</string>
+    <string name="generate_wallet_created">Monedero creada</string>
+    <string name="generate_wallet_create_failed">Creación de monedero fallida</string>
 
     <string name="generate_wallet_type_key">Claves</string>
     <string name="generate_wallet_type_new">Nuevo</string>
@@ -158,7 +153,7 @@
     <string name="generate_mnemonic_hint">Semilla Mnemotécnica de 25 Palabras</string>
     <string name="generate_restoreheight_hint">Altura de Restauración</string>
 
-    <string name="generate_wallet_label">Cartera</string>
+    <string name="generate_wallet_label">Monedero</string>
     <string name="generate_password_label">Contraseña</string>
     <string name="generate_address_label">Dirección Pública</string>
     <string name="generate_viewkey_label">Clave de Vista</string>
@@ -178,7 +173,7 @@
     <string name="send_mixin_hint">Mezclar</string>
     <string name="send_sweep_hint">Barrer</string>
     <string name="send_generate_paymentid_hint">Generar</string>
-    <string name="send_qr_hint">Escanear</string>
+    <string name="send_qr_hint">Scan</string>
     <string name="send_prepare_hint">Preparar</string>
     <string name="send_dispose_hint">Disponer (Deshacer)</string>
     <string name="send_really_send_hint">Último Paso - ¡Confirma!</string>
@@ -188,14 +183,14 @@
     <string name="send_title">Enviar</string>
     <string name="send_available">Fondos disponibles: %1$s XMR</string>
     <string name="send_address_title">Dirección</string>
-    <string name="send_amount_title">Cantidad</string>
+    <string name="send_amount_title">Monto</string>
     <string name="send_settings_title">Ajustes</string>
-    <string name="send_confirm_title">Confirmar</string>
+    <string name="send_confirm_title">Aprobar</string>
     <string name="send_success_title">Hecho</string>
     <string name="send_summary_heading">Resumen</string>
-    <string name="send_amount_too_large">Cantidad > Fondos</string>
+    <string name="send_amount_too_large">Monto > Fondos</string>
 
-    <string name="send_amount_label">Cantidad</string>
+    <string name="send_amount_label">Monto</string>
     <string name="send_fee_label">Comisión</string>
     <string name="send_dust_label">Polvo</string>
     <string name="send_total_label">Total</string>
@@ -222,7 +217,7 @@
     <string name="tx_notes">Notas</string>
     <string name="tx_button_copy">Copiar al Portapapeles</string>
     <string name="tx_copy_message">Copiado al Portapapeles</string>
-    <string name="tx_copy_label">Detalles de la Transacción</string>
+    <string name="tx_copy_label">Detalles de la transacción</string>
     <string name="tx_notes_hint">(opcional)</string>
     <string name="tx_button_notes">Guardar</string>
     <string name="tx_notes_set">Notas guardadas</string>
@@ -235,10 +230,10 @@
     <string name="receive_generate_hint">Muéstrame el código QR</string>
     <string name="receive_paymentid_button">Generar</string>
     <string name="receive_paymentid_hint">ID de Pago (opcional)</string>
-    <string name="receive_amount_hint">Cantidad</string>
+    <string name="receive_amount_hint">Monto</string>
     <string name="receive_amount_xmr_hint">XMR</string>
-    <string name="receive_cannot_open">¡No se ha podido abrir la cartera!</string>
-    <string name="receive_paymentid_invalid">16 o 64 caracteres hexadecimales (0-9,a-f)</string>
+    <string name="receive_cannot_open">¡No se ha podido abrir el monedero!</string>
+    <string name="receive_paymentid_invalid">16 o 64 caracteres hexadecimales (0&#8211;9,a&#8211;f)</string>
     <string name="receive_integrated_paymentid_invalid">Debe estar vacío con una dirección integrada</string>
     <string name="receive_amount_invalid">Debe ser > 0</string>
 
@@ -254,7 +249,7 @@
     <string name="details_alert_no">¡Llévame de vuelta!</string>
     <string name="details_title">Detalles</string>
 
-    <string name="archive_alert_message">¡La cartera será copiada y después borrada!</string>
+    <string name="archive_alert_message">¡El monedero será copiada y después borrada!</string>
     <string name="archive_alert_yes">¡Sí, haz eso!</string>
     <string name="archive_alert_no">¡No gracias!</string>
 
@@ -265,10 +260,10 @@
         <item>Prioridad Alta</item>
     </string-array>
 
-    <string name="fab_create_new">Crear nueva cartera</string>
-    <string name="fab_restore_viewonly">Restaurar cartera de sólo vista</string>
-    <string name="fab_restore_key">Restaurar cartera con claves privadas</string>
-    <string name="fab_restore_seed">Resturar cartera con semilla de 25 palabras</string>
+    <string name="fab_create_new">Crear nueva monedero</string>
+    <string name="fab_restore_viewonly">Restaurar monedero de sólo vista</string>
+    <string name="fab_restore_key">Restaurar monedero con claves privadas</string>
+    <string name="fab_restore_seed">Restaurar monedero con semilla de 25 palabras</string>
     <string name="info_xmrto"><![CDATA[
         <b>Ingresaste una dirección Bitcoin</b><br/>
         <i>Vas a enviar XMR y el destinatario recibirá BTC usando el servicio <b>XMR.TO</b>.</i>
@@ -305,20 +300,21 @@
     <string name="text_noretry">Oh-oh, parece que XMR.TO no está disponible ahora!</string>
     <string name="text_send_btc_amount">%1$s BTC = %2$s XMR</string>
     <string name="text_send_btc_rate">(Cambio: %1$s BTC/XMR)</string>
+    <string name="label_send_settings_advanced">Avanzado</string>
     <string name="label_send_btc_details">Click para más detalles</string>
     <string name="label_send_btc_xmrto_info">Visita https://xmr.to para soporte y rastreo</string>
     <string name="label_send_txinfo">Mira en los datos de la TX para más detalles</string>
     <string name="label_send_btc_xmrto_key_lb">Clave secreta\nXMR.TO</string>
     <string name="label_send_btc_xmrto_key">Clave secreta XMR.TO</string>
     <string name="label_send_btc_address">Dirección BTC destino</string>
-    <string name="label_send_btc_amount">Cantidad</string>
+    <string name="label_send_btc_amount">Monto</string>
     <string name="label_send_btc_create_order">Creando orden XMR.TO</string>
     <string name="label_send_btc_retry">Toca para reintentar</string>
     <string name="send_xmrto_timeout">Oye, esperaste demasiado!</string>
     <string name="label_copy_xmrtokey">Clave XMR.TO</string>
     <string name="message_copy_xmrtokey">¡Clave XMR.TO copiada al portapapeles!</string>
     <string name="send_amount_btc_xmr">%1$s (indicativo)</string>
-    <string name="send_send_label">Gastar mis preciados moneroj</string>
+    <string name="send_send_label">Enviar mis preciados moneroj</string>
     <string name="send_send_timed_label">Gastar mis preciados moneroj (%1$s)</string>
     <string name="send_address_invalid">No es una dirección válida</string>
     <string name="send_fee_btc_label">Comisión (XMR)</string>
