--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -142,6 +142,8 @@
     <string name="generate_wallet_created">Monedero creada</string>
     <string name="generate_wallet_create_failed">Creación de monedero fallida</string>
 
+    <string name="generate_restoreheight_error">Introduce un número o una fecha (AAAA-MM-DD)</string>
+
     <string name="generate_wallet_type_key">Claves</string>
     <string name="generate_wallet_type_new">Nuevo</string>
     <string name="generate_wallet_type_seed">Semilla</string>
@@ -151,7 +153,7 @@
     <string name="generate_viewkey_hint">Clave de Vista</string>
     <string name="generate_spendkey_hint">Clave de Gasto</string>
     <string name="generate_mnemonic_hint">Semilla Mnemotécnica de 25 Palabras</string>
-    <string name="generate_restoreheight_hint">Altura de Restauración</string>
+    <string name="generate_restoreheight_hint">Altura o Fecha (YYYY-MM-DD) de Restauración</string>
 
     <string name="generate_wallet_label">Monedero</string>
     <string name="generate_password_label">Contraseña</string>
