--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -54,7 +54,7 @@
 
     <string name="info_send_xmrto_paid">等待確認中</string>
     <string name="info_send_xmrto_unpaid">等待付款中</string>
-    <string name="info_send_xmrto_error">XMR.TO錯誤 (%1$s)</string>
+    <string name="info_send_xmrto_error">XMR.TO發生錯誤(%1$s)</string>
     <string name="info_send_xmrto_sent">BTC已發送!</string>
     <string name="info_send_xmrto_query">查詢中 &#8230;</string>
 
@@ -77,7 +77,7 @@
 
     <string name="label_send_progress_queryparms">正在查詢 xmr.to 參數</string>
 
-    <string name="label_generic_xmrto_error">XMR.TO 錯誤</string>
+    <string name="label_generic_xmrto_error">XMR.TO 發生錯誤</string>
     <string name="text_generic_xmrto_error">錯誤代碼: %1$d</string>
 
     <string name="text_retry">點選以重試</string>
