--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_rename">Rename &#8230;</string>
     <string name="menu_archive">Archive</string>
     <string name="menu_backup">Backup</string>
+    <string name="menu_backup_to_nfc">Backup To NFC</string>
 
     <string name="password_weak">Continue typing &#8230;</string>
     <string name="password_fair">Meh &#8230;</string>
@@ -371,4 +372,5 @@
     <string name="fab_restore_viewonly">Restore view-only wallet</string>
     <string name="fab_restore_key">Restore wallet from private keys</string>
     <string name="fab_restore_seed">Restore wallet 25 word seed</string>
+    <string name="menu_backup_to_file">Backup To File</string>
 </resources>
